syntax = "proto3";

package customer;

import "google/protobuf/empty.proto";

option java_package = "com.teamsolution.lab.grpc.customer";
option java_multiple_files = true;

service CustomerService {
    rpc createNewCustomer(CreateRequest) returns (google.protobuf.Empty);
    rpc getCustomerProfile(CustomerProfileRequest) returns (CustomerProfileResponse);
}

message CustomerProfileRequest {
    string accountId = 1;
}

message CustomerProfileResponse {
    string fullName = 1;
    string phone = 2;
    string avatarUrl = 3;
}

message CreateRequest {
    string accountId = 1;
    string fullName = 2;
    string avatarUrl  = 3;
    string phone = 4;
}